# telegrambot-cli

./: .env.example  .gitignore  README.md  TELEGRAM_SETUP.md  pyproject.toml
.github/workflows/: release.yml  test.yml
examples/sample_app/: README.md  pyproject.toml
examples/sample_app/sample_app/: __init__.py  __main__.py  monitors.py
examples/sample_app/sample_app/plugins/: __init__.py  _template.py  echo.py  ping.py  time_command.py
telegrambot_cli/: __init__.py  __main__.py  config.py  logging_setup.py  runner.py
telegrambot_cli/commands/: __init__.py  builtins.py  catalog.py  parser.py  plugin_loader.py  registry.py  router.py  types.py
telegrambot_cli/monitoring/: __init__.py  jobs.py  monitors.py
telegrambot_cli/telegram/: __init__.py  handlers.py  message_router.py
tests/: test_config.py  test_parser.py  test_plugin_loader.py  test_router.py  test_runner.py
