[project]
name = "telegrambot-cli-sample"
version = "0.1.0"
description = "Example app using telegrambot-cli with echo/ping/time plugins."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "telegrambot-cli",
]

[project.scripts]
sample-telegram-bot = "sample_app.__main__:main"

[tool.uv.sources]
telegrambot-cli = { path = "../..", editable = true }

[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["sample_app"]
